<resources>
    <string name="app_name">Census</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="err_msg_email">Enter Username / Email Id</string>
    <string name="err_msg_password">Please enter Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_settings">Settings</string>

    <string name="reminder">Reminder</string>
    <string name="villageinfo">Village Info</string>
    <string name="birth_slip">Birth Slip</string>
    <string name="death_slip">Death Slip</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="medicine">Medicine</string>
    <string name="heath_education">Health education</string>
    <string name="supervisor_task">Supervisor task</string>
    <string name="monthly_report">Monthly report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
