<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DashboardFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_bottom_border"
        android:orientation="horizontal"
        android:layout_weight=".125">
        <TextView
            android:id="@+id/txtNotification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textSize="23dp"
            android:gravity="center"
            android:text="@string/reminder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/view_right_border"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtVillageInfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textSize="23dp"
            android:gravity="center"
            android:text="@string/villageinfo"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtBirtSlip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/birth_slip"/>
    <TextView
        android:id="@+id/txtDeathSlip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/death_slip"/>
    <TextView
        android:id="@+id/txtPneumonia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/pneumonia"/>
    <TextView
        android:id="@+id/txtMedicine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/medicine"/>
    <TextView
        android:id="@+id/txtHealthEducation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/heath_education"/>
    <TextView
        android:id="@+id/txtSupervisorTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:background="@drawable/view_bottom_border"
        android:text="@string/supervisor_task"/>
    <TextView
        android:id="@+id/txtMonthlyReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".125"
        android:textSize="23dp"
        android:gravity="center"
        android:text="@string/monthly_report"/>

</LinearLayout>
